# zagreb-lib

./: .gitignore  .wasm-pack.toml  Cargo.toml  LICENSE  README.md  build-wasm.sh  components.md  hamilton_examples.md  package-lock.json  package.json  solana_network_example.md  wasm.md
benches/: zagreb_benches.rs
docs/: README.md  index.html  index.js  package.json  zagreb_lib.d.ts  zagreb_lib.js  zagreb_lib_bg.wasm  zagreb_lib_bg.wasm.d.ts
examples/: petersen_analysis.rs  solana_network.rs
examples/web/: index.html  index.js  package.json  style.css  webpack.config.js
solana-network-analysis/: Cargo.toml
solana-network-analysis/src/: main.rs
src/: lib.rs  wasm.rs
