[package]
name = "zagreb-lib"
version = "0.1.0"
edition = "2021"
authors = ["Will Kennedy"]
description = "A Rust library for analyzing graph properties using the Zagreb index and Hamiltonian criteria"
license = "MIT"
repository = "https://github.com/wkennedy/zagreb-lib"
keywords = ["graph", "network", "hamiltonian", "zagreb", "topology"]
categories = ["algorithms", "mathematics", "network-programming"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1

[[example]]
name = "solana_network"
path = "examples/solana_network.rs"

[[bench]]
name = "zagreb_benches"
harness = false