[package]
name = "zagreb-lib"
version = "0.1.0"
edition = "2021"
authors = ["Will Kennedy"]
description = "A Rust library for analyzing graph properties using the Zagreb index and Hamiltonian criteria"
license = "MIT"
repository = "https://github.com/wkennedy/zagreb-lib"
keywords = ["graph", "network", "hamiltonian", "zagreb", "topology"]
categories = ["algorithms", "mathematics", "network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.64"
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.0"

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1

[[example]]
name = "petersen_analysis"
path = "examples/petersen_analysis.rs"

[[bench]]
name = "zagreb_benches"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]